==> gavinlyonsrepo/MCP4725_PICO/src/mcp4725/mcp4725.cpp <==
#include "../../include/mcp4725/mcp4725.hpp"

bool MCP4725_PICO::begin(MCP4725_I2C_Addr_e addr, i2c_inst_t* i2c_type, uint16_t CLKspeed, uint8_t SDApin, uint8_t SCLKpin, uint32_t I2C_timeout)
{

	 // init I2c pins and interface
	_i2cAddress  = addr;
	_i2c = i2c_type;
	_SClkPin = SCLKpin;
	_SDataPin = SDApin;
	_CLKSpeed = CLKspeed;
	_I2C_Delay = I2C_timeout;

	gpio_set_function(_SDataPin, GPIO_FUNC_I2C);
	gpio_set_function(_SClkPin, GPIO_FUNC_I2C);
	gpio_pull_up(_SDataPin);
	gpio_pull_up(_SClkPin);
	i2c_init(_i2c, _CLKSpeed * 1000);
	busy_wait_ms(50);
	// check connection?
	return isConnected();
}

void MCP4725_PICO::setReferenceVoltage(float voltage)
{
	if (voltage == 0)
		_refVoltage = _MCP4725_REFERENCE_VOLTAGE;
	else
		_refVoltage = voltage;

	_bitsPerVolt = (float)_MCP4725_STEPS / _refVoltage;
}

bool MCP4725_PICO::setVoltage(float voltage, MCP4725_CmdType_e mode, MCP4725_PowerDownType_e powerType)
{
	uint16_t voltageValue = 0;

	// Convert voltage to DAC bits
	//xx,xx,xx,xx,D11,D10,D9,D8 ,D7,D6,D4,D3,D2,D9,D1,D0
	if (_safetyCheck  == true)
	{
		if (voltage >= _refVoltage)
			voltageValue = _MCP4725_MAX_VALUE;
		else if (voltage <= 0)
			voltageValue = 0; //make sure value never below zero
		else
			voltageValue = voltage * _bitsPerVolt;
	}
	else if (_safetyCheck ==  false)
	{
		voltageValue = voltage * _bitsPerVolt;
	}

	return writeCommand(voltageValue, mode, powerType);
}

float MCP4725_PICO::getVoltage()
{
	float InputCode = getInputCode();
	if (InputCode != _MCP4725_ERROR) 
		return InputCode / _bitsPerVolt;
	else
		return InputCode; // i2c Error return 0xFFFF
}

float MCP4725_PICO::getStoredVoltage()
{
	float InputCode = getStoredInputCode();

	if (InputCode != _MCP4725_ERROR) 
		return InputCode / _bitsPerVolt;
	else
		return InputCode;
}

uint16_t MCP4725_PICO::getPowerType()
{
	uint16_t powerTypeValue = readRegister(MCP4725_ReadSettings); 
	//powerTypeValue = BSY,POR,xx,xx,xx,PD1,PD0,xx

	if (powerTypeValue != _MCP4725_ERROR){
		powerTypeValue &= 0x0006;   //00,00,00,00,00,PD1,PD0,00
		return powerTypeValue >> 1; //00,00,00,00,00,00,PD1,PD0
	}else{
		return powerTypeValue;
	}
}

uint16_t MCP4725_PICO::getStoredPowerType()
{
	uint16_t powerTypeValue = readRegister(MCP4725_ReadEEPROM); 
	//powerTypeValue = x,PD1,PD0,xx,D11,D10,D9,D8,D7,D6,D5,D4,D3,D2,D1,D0

	if (powerTypeValue != _MCP4725_ERROR)
	{
		powerTypeValue = powerTypeValue << 1;  //PD1,PD0,xx,D11,D10,D9,D8,D7,D6,D5,D4,D3,D2,D1,D0,00
		return  powerTypeValue >> 14; //00,00,00,00,00,00,00,00,00,00,00,00,00,00,PD1,PD0
	}else
	{
		return powerTypeValue;
	}
}

bool MCP4725_PICO::getEEPROMBusyFlag()
{
	uint16_t registerValue = readRegister(MCP4725_ReadSettings); 
	//register value = BSY,POR,xx,xx,xx,PD1,PD0,xx
	bool ReturnValue = false;
	if (registerValue != _MCP4725_ERROR)
	{
		ReturnValue = ((registerValue >> 7) & 0x01);
		return ReturnValue; //1 - Not Busy, 0 - Busy
	}else
	{
		return ReturnValue; // I2C error
	}
}

uint16_t MCP4725_PICO::readRegister(MCP4725_ReadType_e readType)
{
	uint16_t dataWord = readType;
	uint8_t dataBuffer[6];
	int ReturnCode = 0;

	/*Format of read data :
	== Settings data one byte
	BSY,POR,xx,xx,xx,PD1,PD0,xx, 
	== DAC register data 3 byte(1st 1 don't care)
	D11,D10,D9,D8,D7,D6,D5,D4, D3,D2,D1,D0,xx,xx,xx,xx, 
	== EEPROM data 5 byte (1st 3 don't care)
	xx,PD1,PD0,xx,D11,D10,D9,D8, D7,D6,D5,D4,D3,D2,D1,D0
	*/
	switch (readType)
	{
		case MCP4725_ReadSettings: // Read one byte settings
			ReturnCode = i2c_read_timeout_us(_i2c, _i2cAddress, dataBuffer, 1, false, _I2C_Delay );
			dataWord = dataBuffer[0];
			break;

		case MCP4725_ReadDACReg: // Read 3 bytes  DAC register data, skip first 1 don't care
			ReturnCode = i2c_read_timeout_us(_i2c, _i2cAddress, dataBuffer, 3, false, _I2C_Delay );
			dataWord = dataBuffer[1];
			dataWord = (dataWord << 8) | dataBuffer[2];
			break;

		case MCP4725_ReadEEPROM: // Read 5 bytes EEPROM data , first 3 don't care
			ReturnCode = i2c_read_timeout_us(_i2c, _i2cAddress, dataBuffer, 5, false, _I2C_Delay );
			dataWord = dataBuffer[3];
			dataWord = (dataWord << 8) | dataBuffer[4];
			break;
	}

	if (ReturnCode < 1)
	{ // no bytes read back from device or error issued
		if (_serialDebug == true)
		{
			printf("1205 I2C Error readRegister : \r\n");
			printf("Tranmission Code :: %d\r\n", ReturnCode);
			busy_wait_ms(100);
		}
	 	return _MCP4725_ERROR;
 	 }else{
		return dataWord;
 	}
}
